--- a/.github/ISSUE_TEMPLATE/subject_request.yml
+++ b/.github/ISSUE_TEMPLATE/subject_request.yml
@@ -1,4 +1,4 @@
-name: "Onderwijs: Informatie / Vraag"
+name: "Vakk Request"
 description: "Kies Leerjaar, Onderwijsniveau en Schoolvak. Voeg optioneel notities toe voor extra context of urgentie."
 title: "Onderwijs — {leerjaar} / {schoolvak}"
 labels: ["education"]
@@ -8,20 +8,14 @@ body:
     id: leerjaar
     attributes:
       label: "Leerjaar"
-      description: "Selecteer het leerjaar."
+      description: "Selecteer het Leerjaar."
       options:
-        - label: "Jaar 1"
-          value: "jaar-1"
-        - label: "Jaar 2"
-          value: "jaar-2"
-        - label: "Jaar 3"
-          value: "jaar-3"
-        - label: "Jaar 4"
-          value: "jaar-4"
-        - label: "Jaar 5"
-          value: "jaar-5"
-        - label: "Jaar 6"
-          value: "jaar-6"
+        - Jaar 1
+        - Jaar 2
+        - Jaar 3
+        - Jaar 4
+        - Jaar 5
+        - Jaar 6
     validations:
       required: true
 
@@ -29,16 +23,14 @@ body:
     id: onderwijsniveau
     attributes:
       label: "Onderwijsniveau"
-      description: "Kies het onderwijsniveau."
+      description: "Kies het Onderwijsniveau."
       options:
-        - label: "Havo/VWO"
-          value: "havo-vwo"
-        - label: "Havo"
-          value: "havo"
-        - label: "VWO"
-          value: "vwo"
-        - label: "Other"
-          value: "other"
+        - Havo
+        - Havo/VWO
+        - VWO
+        - VWO/Gymnasium
+        - TL
+        - other
     validations:
       required: true
 
@@ -46,21 +38,17 @@ body:
     id: schoolvak
     attributes:
       label: "Schoolvak"
-      description: "Kies het vak. Voeg meer opties toe in deze file als nodig."
+      description: "Kies het vak. Kijk wel of er specifieke begrippen zijn die makkelijk zijn in te voeren."
+      multiple: true
       options:
-        - label: "Frans"
-          value: "frans"
-        - label: "Duits"
-          value: "duits"
-        - label: "Nederlands"
-          value: "nederlands"
-        - label: "Natuurkunde"
-          value: "natuurkunde"
-        - label: "Scheikunde"
-          value: "scheikunde"
-        - label: "NaSk"
-          value: "nask"
-        # add your other subjects here
+        - Frans
+        - Duits
+        - Geschiedenis
+        - NaSk
+        - Natuurkunde
+        - Scheikunde
+        - Economie
+        - Engels
     validations:
       required: true
 
@@ -68,5 +56,5 @@ body:
     id: notes
     attributes:
       label: "Notities (optioneel)"
-      description: "Extra info, urgentie, of welk hoofdstuk precies — laat leeg als niet van toepassing."
-      placeholder: "Bijv. Hoofdstuk 3.2; toets komende vrijdag; uitleg bij opgave 5"
+      description: "Extra info, urgentie, en/of welk hoofdstuk precies — laat leeg als niet van toepassing."
+      placeholder: "Bijv. Hoofdstuk 3.2 voor volgende week."
