Fix typo in subject_request.yml

--- a/.github/ISSUE_TEMPLATE/subject_request.yml
+++ b/.github/ISSUE_TEMPLATE/subject_request.yml
@@ -1,4 +1,4 @@
-name: "Vakk Request"
+name: "Vak Request"
 description: "Kies Leerjaar, Onderwijsniveau en Schoolvak. Voeg optioneel notities toe voor extra context of urgentie."
 title: "Onderwijs — {leerjaar} / {schoolvak}"
 labels: ["education"]
